--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,17 @@
 			<artifactId>spring-context</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		</dependency>
+		<!-- exemple de connecteur jdbc -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.41</version>
+		</dependency>
+
 		<!-- Tests unitaires -->
 		<dependency>
 			<groupId>junit</groupId>
